tests/base/parser/bad/cmodule-contract-cid-lparen-id-with.scilla
scilla_version 0

(* 'as' should be a colon *)
contract Test
(valid as bool)
